Fix metrics view to align columns across all browsers
Apply flex via simple positional rules that apply to all rows of the table
instead of trying to name the elements in both the header and body that
should get flex: 1 vs. flex: 2.  The precentage heading was matching
both rules and the specificity differed depending on whether we had
native ShadowDOM.  Fixes #301

--- a/static/sass/elements/chromedash-metrics.scss
+++ b/static/sass/elements/chromedash-metrics.scss
@@ -36,13 +36,20 @@
       }
     }
 
+    > :first-child {
+      @include flex(1);
+    }
+
+    > :nth-child(2) {
+      @include flex(2);
+    }
+
     // &:nth-child(even) {
     //   background-color: #ccc;
     // }
 
     label {
       font-weight: 600;
-      @include flex(1);
       // word-wrap: break-word;
 
       &:first-child {
@@ -57,10 +64,6 @@
     x-meter {
       padding-left: 7px;
       cursor: pointer;
-    }
-
-    x-meter, .flex2 {
-      @include flex(2);
     }
   }
 }
